# oxigraph-sparql-api-serverless

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.build  LICENSE.md  README.md  build.sh  template.yaml
src/: config.rs  create-db.rs  main.rs
