[package]
name = "oxigraph-server-aws-serverless"
version = "0.1.0"
authors = ["uedayou <yooueda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sled = ["oxigraph/sled"]
rocksdb = ["oxigraph/rocksdb"]
default = ["rocksdb"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "create-db"
path = "src/create-db.rs"

[dependencies]
percent-encoding = "2.1.0"
lambda_http = "0.3.0"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
oxigraph = { version = "0.2.2", path="./lib/oxigraph/lib" }
